# Wyvern

./: .gitignore  CMakeLists.txt  resources.qrc  resources.qrc.autosave
Src/: Main.cpp
Src/Ui/: CMakeLists.txt  Gui.cpp  Gui.h  GuiResources.qrc  InitialSettings.h  InitialSettings.ui  InitialSettings.ui.autosave  InitialSettingss.cpp  SettingValues.h  Settings.cpp  Settings.h  Settings.h.autosave  Ui.cpp  Ui.h
Src/Ui/Dialogs/: CreateDialog.cpp  CreateDialog.h  CreateDialog.ui  MechanicalEngineringWidget.cpp  MechanicalEngineringWidget.h  MechanicalEngineringWidget.ui  OpenDialog.cpp  OpenDialog.h
Src/Ui/Icons/Dark3DToolsIcons/: PrismaHover.free  YZFHover.free
Src/Ui/Icons/Light3DToolsIcons/: Arc.free  Circle.free  Line.free  PolyLine.free  Rectangle.free  Без названия 2.free
Src/Ui/Languages/: English.json  Russian.json  RussianMacOS.json
Src/Ui/MainWindow/: MainWindow.cpp  MainWindow.h  MainwWndow.h
Src/Ui/MenuBar/: FileMenu.cpp  FileMenu.h  HelpMenu.cpp  HelpMenu.h
Src/Ui/Styles/DarkStyle/: CAD3DFigureWidget.qss  CADToolBar.qss  DarkStyle.json  FigureComboBox.json  MainToolBar.qss  MainWindow.qss  Menu.qss  MenuBar.qss
Src/Ui/Styles/LightStyle/: CAD3DFigureWidget.qss  CADToolBar.qss  FigureComboBox.json  LightStyle.json  MainToolBar.qss  MainWindow.qss  Menu.qss  MenuBar.qss
Src/Ui/Styles/WindowsDarkStyle/: MainToolBar.qss  WindowsDarkTheme.json
Src/Ui/ToolBars/: CADToolBar.cpp  CADToolBar.h  CADToolsToolBar.cpp  CADToolsToolBar.h  MainToolBar.cpp  MainToolBar.h  PlanToolsWidget.cpp  PlanToolsWidget.h
Src/Ui/ToolBars/CADTools/: CAD3DToolsWidget.cpp  CAD3DToolsWidget.h  DrawToolsWidget.cpp  DrawToolsWidget.h
Src/Ui/ToolBars/PlanTools/: LineSettingsPlanWidget.cpp  LineSettingsPlanWidget.h  LineSettingsPlanWidget.ui  MechanicalEngineringTabWidget.cpp  MechanicalEngineringTabWidget.h  MechanicalEngineringTabWidget.ui
